# sbermarket-api

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  openapi_gen_config.yml  pyproject.toml  sbermarket_openapi.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  publish.yml
docker/: README.md
examples/: async_search_same_products.py  search_chipest_product.py  search_same_products.py
sbermarket_api/: __init__.py  api.py  client.py  product.py  store.py  types.py
sbermarket_api/api/client/: get_stores.py  get_stores_store_id.py
sbermarket_api/api/store/: get_stores_store_id_products.py
sbermarket_api/models/: __init__.py  get_stores_shipping_method.py  search_products_response.py  search_products_response_facets_item.py  search_products_response_facets_item_options_item.py  search_products_response_meta.py  search_products_response_private_filters.py  search_products_response_products_item.py  search_products_response_root_categories.py  search_products_response_root_categories_options_item.py  search_products_response_sort_item.py  store.py  store_city.py  store_config.py  store_licenses_item.py  store_list_item.py  store_list_item_shipping_methods_item.py  store_location.py  store_operational_zone.py  store_payment_methods_stores_item.py  store_payment_methods_stores_item_payment_method.py  store_retailer.py  store_retailer_appearance.py  store_store_schedule.py  store_store_schedule_template.py  store_store_schedule_template_delivery_times_item.py  store_store_shipping_methods_item.py  store_store_shipping_methods_item_shipping_method.py  store_store_zones_item.py  store_tenants_item.py
templates/: client.py.jinja  endpoint_module.py.jinja
tests/fixtures/: store_83.json
tests/objects/: test_client.py
tests/test_example/: test_hello.py
